styles/style.css
body {
  margin: 0;
  background-image: url("../data/mountains.gif");
  background-size: 30%;
}

#wrapper {
    font-family: 'Oxygen Mono', monospace;
    position: relative;
}

#main-block {
  background-color: rgba(255, 255, 255, 0.6);
  border-radius: 6%;
  color: black;
  width: 70%;
  position: absolute;
  top: 50%;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, 10%);
}


header.global {
  margin-top: 1em;
  text-align: center;
  position: relative;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, 0);
  width: 80%;
}

header.subpage {
  font-size: 1em;
  margin-top: 1em;
  position: relative;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, 0);
  width: 80%;
}

header.subpage a:hover {
  background-color: transparent;
}

.name {
  font-family: 'Baloo Bhaina', sans-serif;;
    font-size: 3em;
}

#description {
  padding-top: 5em;
  padding-left: 1em;
  padding-right: 1em;
  padding-bottom: 2em;
  text-align: center;
}

#link-bar {
  border-left: none;
  border-right: none;
  margin-bottom: 1em;
  padding: 0.1em 0;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
  background-color: white;
  background-color: rgba(255, 255, 255, 100);
  font-size: 1em;
  display: table;
}

ul {
  margin: 0;
  padding: 0;
  list-style: none;
}

a {
  text-decoration: none;
  color: inherit;
}

a:hover {
  background-color: black;
  color: white;
}

#link-bar ul {
  display: table-row;
}

#link-bar ul li {
  display: table-cell;
  text-align: center;
  width: 33.33%;
  width: calc(100% / 3);
}


ul li a {
  display: block;
  background: white;
}

#front-nav {
  display: table;
  font-size: 1.8em;
  padding: 0.5em; 0;
  position: relative;
  left: 10%;
}


#front-nav ul li {
  margin-bottom: 1em;
}

#front-nav ul li a {
  padding-left: 0.2em;
  padding-right: 0.2em;
}

nav {
    border-left: none;
    border-right: none;
    margin-bottom: 1em;
    padding: 0.1em 0;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    background-color: white;
    background-color: rgba(255, 255, 255, 100);
    font-size: 1em;
    display: table;
}

nav ul {
    display: table-row;
}

nav ul li {
  display: table-cell;
  text-align: center;
  width: 25%;
}

a.selected {
  background-color: black;
  color: white;
}

a.selected:hover {
  background-color: white;
  color: black;
}

h1 {
  font-family: 'Baloo Bhaina', sans-serif;;
  font-size: 2rem;
  position: relative;
  width: auto;
  left: 50%;
  transform: translate(-40%, 0);
  margin-top: 1em;
  margin-bottom: 0;
}

section {
  width: 80%;
  position: relative;
  left: 50%;
  margin-right: -50%;
  transform: translate(-50%, 0);
  margin-top: 0.5em;
  margin-bottom: 1em;
  background-color: white;
  padding: 1em;
  border-radius: 5%;
}

